--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -2,6 +2,9 @@
 	width: 42px;
 	height: 42px;
 }
+li {
+    list-style-type: none;
+}
 nav {
 	width: 100%;
 	background: #E0E0E0;
@@ -191,6 +194,10 @@ cursor: pointer;
 }
 
 .container { padding-top:30px; }
+
+.error {
+	color: red;
+}
 
 .button2 {
 	height: 42px; 
