--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -1,6 +1,7 @@
 .header-avatar{
-	width: 42px;
-	height: 42px;
+	padding: 2px;
+	width: 48px;
+	height: 48px;
 }
 li {
     list-style-type: none;
@@ -15,6 +16,7 @@ nav {
 	padding: 0px !important;
 }
 .logo{  
+	height: 44px;
 	margin: 10px 25px;
 	font-family: 'Hind', sans-serif;
 	font-size: 30px;
@@ -22,26 +24,117 @@ nav {
 	padding-left: 20px;
 	padding-right: 40px;
 }
-.navicon{
-	border: none;
-	background-color: #E0E0E0;
-	display: inline-block;
-	font-size: 30px;
-	color: white;
-	margin: 10px 25px;
-	}
-.mainNavDropDown{
-	display: none; 
-	position: absolute; 
-	background-color: #f9f9f9; 
-	min-width: 160px; 
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); 
-	padding: 12px 16px; 
-	z-index: 1;
-	}
-.navicon:hover .mainNavDropDown {
-	display: block;
+
+.dropdown {
+	height: 42px;
+	margin: 10px 0px;
 }
+
+* {
+  margin: 0;
+  padding: 0; 
+}
+
+/* Icon 2 */
+
+#nav-icon2 {
+  width: 60px;
+  height: 42px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon2 span {
+  display: block;
+  position: absolute;
+  height: 7px;
+  width: 50%;
+  background: black;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon2 span:nth-child(even) {
+  left: 50%;
+  border-radius: 0 9px 9px 0;
+}
+
+#nav-icon2 span:nth-child(odd) {
+  left:0px;
+  border-radius: 9px 0 0 9px;
+}
+
+#nav-icon2 span:nth-child(1), #nav-icon2 span:nth-child(2) {
+  top: 0px;
+}
+
+#nav-icon2 span:nth-child(3), #nav-icon2 span:nth-child(4) {
+  top: 18px;
+}
+
+#nav-icon2 span:nth-child(5), #nav-icon2 span:nth-child(6) {
+  top: 36px;
+}
+
+#nav-icon2.open span:nth-child(1),#nav-icon2.open span:nth-child(6) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon2.open span:nth-child(2),#nav-icon2.open span:nth-child(5) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon2.open span:nth-child(1) {
+  left: 5px;
+  top: 7px;
+}
+
+#nav-icon2.open span:nth-child(2) {
+  left: calc(50% - 5px);
+  top: 7px;
+}
+
+#nav-icon2.open span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+
+#nav-icon2.open span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+
+#nav-icon2.open span:nth-child(5) {
+  left: 5px;
+  top: 29px;
+}
+
+#nav-icon2.open span:nth-child(6) {
+  left: calc(50% - 5px);
+  top: 29px;
+}
+
 .footer {
 	position: fixed;
 	left: 0;
@@ -156,41 +249,6 @@ cursor: pointer;
 }
 .dropdown:hover .dropdown-content {
 	display: block;
-}
-
-#custom-search-input {
-	height: 42px;
-}
-
-#custom-search-input .search-query {
-	height: 42px;
-	padding-right: 3px;
-	padding-left: 3px;
-	/* IE7-8 doesn't have border-radius, so don't indent the padding */
-
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-}
-
-#custom-search-input button {
-	border: 0;
-	background: none;
-	/** belows styles are working good */
-	padding: 2px 5px;
-	margin-top: 2px;
-	position: relative;
-	left: -28px;
-	/* IE7-8 doesn't have border-radius, so don't indent the padding */
-	margin-bottom: 0;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-	color:#D9230F;
-}
-
-.search-query:focus + button {
-	z-index: 3;   
 }
 
 .container { padding-top:30px; }
